traces/bug_745.txt
examples++-mpi/MUMPS_FreeFem.cpp:1967: error: DEAD_STORE
  The value written to &ierr (type int) is never used.
Showing all 1 steps of the trace


examples++-mpi/MUMPS_FreeFem.cpp:1967:6: Write of unused value
1965.   
1966.   	    int commSize;	    
1967.   	    ierr=MPI_Comm_size(comm,&commSize);
             ^
1968.   	    int m_loc_fst = m/commSize;
1969.   	    int m_loc;
